# 42_matcha

./: .cursorrules  .gitignore  Project Requirements.md  TECH_STACK.md  todo.txt
backend/: .example-env  Cargo.toml  DATABASE.md  rustfmt.toml
backend/.cargo/: config.toml
backend/migrations/: 001_create_users_table.sql
backend/scripts/: reset_db.sh  setup_db.sh
backend/src/: main.rs  types.rs
backend/src/api/: auth.rs  chat.rs  interactions.rs  mod.rs  notifications.rs  users.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs  user_repository.rs
backend/src/enums/: account_status.rs  environment.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  user.rs
backend/src/routes/: auth.rs  chat.rs  interactions.rs  mod.rs  notifications.rs  users.rs  websocket.rs
backend/src/services/: jwt.rs  mod.rs
backend/src/utils/: mod.rs  validation.rs
backend/src/validation/: core.rs  email.rs  enum_schema.rs  enums.rs  mod.rs  number.rs  string.rs  url.rs
backend/src/websocket/: mod.rs
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: .example.env  App.tsx  index.css
frontend/src/components/: AuthForm.tsx  LoginModal.tsx  Modal.tsx  ModalProvider.tsx  ProtectedRoute.tsx  auth-form.tsx  button.tsx  form-input.tsx  form.tsx  login-modal.tsx  protected-route.tsx  validated-input.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BrowsePage.tsx  ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  login-page.tsx  (+2 more)
(+34 files in other folders)
